--- a/myrate/package.json
+++ b/myrate/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.3",
