--- a/myrate/myrate_frontend/package.json
+++ b/myrate/myrate_frontend/package.json
@@ -21,10 +21,12 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.3",
+    "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "react-sidebar": "^3.0.2",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
