--- a/myrate/myrate_frontend/package.json
+++ b/myrate/myrate_frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material/tooltip": "^14.0.0",
     "@nivo/bar": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.9.1",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "react-sidebar": "^3.0.2",
+    "reactjs-popup": "^2.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
