--- a/myrate/myrate_frontend/package.json
+++ b/myrate/myrate_frontend/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "react-sidebar": "^3.0.2",
+    "react-toastify": "^9.1.1",
     "reactjs-popup": "^2.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
