--- a/myrate/myrate_frontend/package.json
+++ b/myrate/myrate_frontend/package.json
@@ -14,7 +14,9 @@
     "localforage": "^1.10.0",
     "mdb-react-ui-kit": "^5.1.0",
     "mdbreact": "^5.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
