--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "localforage": "^1.10.0",
+    "react-collapsible": "^2.10.0",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
