--- a/myrate/myrate_frontend/package.json
+++ b/myrate/myrate_frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "localforage": "^1.10.0",
+    "material-ui-popup-state": "^5.0.8",
     "mdb-react-ui-kit": "^5.1.0",
     "mdbreact": "^5.2.0",
     "prop-types": "^15.8.1",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.0",
     "react-horizontal-scrolling-menu": "^3.2.3",
+    "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.7.0",
